# python-parser

./: .gitignore  .gitmodules  .tool-versions  README.md  checksum-Elixir.PythonParser.exs  mix.exs
.github/workflows/: release.yml
lib/: python_parser.ex
native/pythonparser/: Cargo.toml
native/pythonparser/src/: lib.rs
test/: python_parser_test.exs
